--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css">
     <title>Waterlabel</title>
   </head>
   <body>
